--- a/resources/css/embla-carousel.css
+++ b/resources/css/embla-carousel.css
@@ -1,11 +1,34 @@
 .embla {
-    max-width: 600px;
     width: 100%;
     margin: auto;
     overflow: hidden;
-    --slide-height: 19rem;
+    --slide-height: 15rem;
     --slide-spacing: 1rem;
     --slide-size: 50%;
+}
+
+.embla__viewport {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+@media (min-width: 640px) {
+    .embla {
+        width: 85%;
+        --slide-height: 15rem;
+        --slide-spacing: 1rem;
+        --slide-size: 50%;
+    }
+}
+
+@media (min-width: 767px) {
+    .embla {
+        width: 67%;
+        --slide-height: 15rem;
+        --slide-spacing: 1rem;
+        --slide-size: 40%;
+    }
 }
 
 .embla__viewport {
@@ -23,66 +46,4 @@
     flex: 0 0 var(--slide-size);
     min-width: 0;
     padding-left: var(--slide-spacing);
-}
-
-.embla__slide__number {
-    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-    border-radius: 1.8rem;
-    font-size: 4rem;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: var(--slide-height);
-    user-select: none;
-}
-
-.embla__controls {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    justify-content: space-between;
-    gap: 1.2rem;
-    margin-top: 1.8rem;
-}
-
-.embla__dots {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: center;
-    margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
-}
-
-.embla__dot {
-    -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
-    -webkit-appearance: none;
-    appearance: none;
-    background-color: transparent;
-    touch-action: manipulation;
-    display: inline-flex;
-    text-decoration: none;
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    margin: 0;
-    width: 2.6rem;
-    height: 2.6rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-}
-
-.embla__dot:after {
-    box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-    width: 1.4rem;
-    height: 1.4rem;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    content: '';
-}
-
-.embla__dot--selected:after {
-    box-shadow: inset 0 0 0 0.2rem var(--text-body);
 }
